# google-adk-studio

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  init-db.sql
backend/: Dockerfile  Dockerfile.worker  pyproject.toml
backend/agents/greeter/: agent.py
backend/agents/oss_reporter/: agent.py  tools.py
backend/agents/researcher/: agent.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: config.py  main.py
backend/src/api/: agents.py  run_sse.py  sessions.py  tools.py  workflows.py
backend/src/db/: database.py  tables.py
backend/src/models/: agent.py  tool.py  workflow.py
backend/src/services/: agent_service.py  tool_registry.py  workflow_service.py
backend/src/temporal/: activities.py  worker.py  workflows.py
backend/tests/: test_agent_service.py  test_health.py  test_tools_api.py  test_workflows_api.py
docs/superpowers/plans/: 2026-03-15-adk-studio-implementation.md
docs/superpowers/specs/: 2026-03-15-adk-studio-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: sidebar.tsx
frontend/src/domains/agents/components/: agent-chat.tsx  agent-form.tsx  agent-info-panel.tsx  agent-list.tsx
frontend/src/domains/agents/hooks/: use-agents.ts
frontend/src/domains/agents/pages/: agent-detail-page.tsx  agents-page.tsx
frontend/src/domains/mcps/pages/: mcps-page.tsx
frontend/src/domains/runs/components/: run-detail.tsx  (+1 more)
frontend/src/lib/: api-client.ts  query-provider.tsx  use-sse.ts
(+22 files in other folders)
